Implementing neuron built from scratch

--- a/Skin_Cancer_Predict_Model.ipynb
+++ b/Skin_Cancer_Predict_Model.ipynb
@@ -1175,12 +1175,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9a201fc",
+   "cell_type": "markdown",
+   "id": "ff2b4ab3-f2ed-4c59-b1ae-87193846e3d4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6d9fa3c-df8d-402f-a682-dd321dc0febc",
+   "metadata": {},
+   "source": [
+    "## Still figuring out regarding management of complex datasets like Skin cancer.\n",
+    "\n",
+    "### Work In Progress... 🔨"
+   ]
   }
  ],
  "metadata": {
