Implementing neuron built from scratch

--- a/Skin_Cancer_Predict_Model.ipynb
+++ b/Skin_Cancer_Predict_Model.ipynb
@@ -1189,7 +1189,20 @@
    "source": [
     "## Still figuring out regarding management of complex datasets like Skin cancer.\n",
     "\n",
-    "### Work In Progress... 🔨"
+    "### Work In Progress... 🔨\n",
+    "\n",
+    "- **Changes to be implemented:**\n",
+    "- Activation function to be changed.\n",
+    "- Optimization function to be changed.\n",
+    "- Also, working with large image datasets, hence have to flatten the Image data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2768ee24-897a-4f93-bc78-8bd4d506946e",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   }
  ],
